--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,12 @@
             <version>7.4.0</version>
         </dependency>
 
-        <dependency> <!-- for extracting json as pojo -->
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.10.2</version>
+            <version>2.11.2</version>
         </dependency>
+
 
     </dependencies>
 
